--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,7 @@ addopts =
     --tb=short
     --strict-markers
     --disable-warnings
+    --cov=ragu
 
 python_files = test_*.py
 python_classes = Test*
