--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "tenacity>=9.1.2",
     "tiktoken>=0.11.0",
     "tqdm>=4.67.1",
+    "diskcache",
 ]
 
 [project.optional-dependencies]
